<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/page_padding"
    tools:context="edu.usc.csci310.focus.focus.presentation.schedule.CreateScheduleInterfaceController"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/create_schedule_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_schedule_name"
            android:paddingRight="@dimen/fab_margin"/>
        <EditText
            android:id="@+id/create_schedule_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/create_schedule_name"
            android:layout_alignBaseline="@+id/create_schedule_name"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/create_schedule_profiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_schedule_profiles" />
        <Button
            android:id="@+id/create_schedule_profiles_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_profiles"
            android:layout_toEndOf="@id/create_schedule_profiles"
            android:layout_alignBaseline="@id/create_schedule_profiles"

            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/create_schedule_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_schedule_days" />
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_schedule_days"
            android:text="@string/sunday"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/sunday"
            android:layout_alignBaseline="@id/sunday"
            android:text="@string/monday"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/monday"
            android:layout_alignBaseline="@id/monday"
            android:text="@string/tuesday"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tuesday"
            android:layout_alignBaseline="@id/tuesday"
            android:text="@string/wednesday"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/wednesday"
            android:layout_alignBaseline="@id/wednesday"
            android:text="@string/thursday"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/thursday"
            android:layout_alignBaseline="@id/thursday"
            android:text="@string/friday"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/friday"
            android:layout_alignBaseline="@id/friday"
            android:text="@string/saturday"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/repeat_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_weekly" />
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/weekly_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
