<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/page_padding"
        tools:context="edu.usc.csci310.focus.focus.presentation.schedule.AddProfileToSchedule"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">
            <TextView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Profile"
                android:textSize="18sp"/>
            <Spinner
                android:id="@+id/profile_spinner"
                android:layout_toEndOf="@id/profile"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_height="match_parent"
                android:background="@color/toolbar"
                android:text="@string/add_profiles" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/create_schedule_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_schedule_days"
                android:textSize="18sp" />
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_schedule_days"
                android:text="@string/sunday"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/sunday"
                android:layout_alignBaseline="@id/sunday"
                android:text="@string/monday"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/monday"
                android:layout_alignBaseline="@id/monday"
                android:text="@string/tuesday"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tuesday"
                android:layout_alignBaseline="@id/tuesday"
                android:text="@string/wednesday"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/wednesday"
                android:layout_alignBaseline="@id/wednesday"
                android:text="@string/thursday"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/thursday"
                android:layout_alignBaseline="@id/thursday"
                android:text="@string/friday"/>
            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/friday"
                android:layout_alignBaseline="@id/friday"
                android:text="@string/saturday"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/start_time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">
            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="18sp"
                android:paddingRight="@dimen/fab_margin"
                android:layout_marginBottom="8dp"
                android:layout_centerHorizontal="true"/>
            <Button
                android:id="@+id/start_time_button"
                android:layout_below="@id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/toolbar"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/duration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">
            <TextView
                android:id="@+id/duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/hours"
                android:layout_below="@id/duration_text"
                android:layout_toStartOf="@id/duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hours"/>
            <TextView
                android:id="@+id/mins"
                android:layout_below="@id/duration_text"
                android:layout_toEndOf="@id/duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="mins"/>
            <EditText
                android:id="@+id/hours_field"
                android:layout_below="@id/hours"
                android:layout_alignLeft="@id/hours"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"/>
            <EditText
                android:id="@+id/mins_field"
                android:layout_below="@id/mins"
                android:layout_alignLeft="@id/mins"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"/>

        </RelativeLayout>
        <Button
            android:id="@+id/add_profile"
            android:layout_below="@id/duration_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/add_profiles"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</RelativeLayout>